# nbody2

./: .gitignore
nbody2/: CMakeLists.txt  body.c  body.h  c11threads.h  calculationthread.c  calculationthread.h  config.h  main.c  system.c  system.h  tipsy.c  tipsy.h  tree.c  tree.h  types.h  vec3.c  vec3.h
nbody2.xcodeproj/: project.pbxproj
nbody2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
nbody2.xcodeproj/xcuserdata/Thomas.xcuserdatad/xcschemes/: nbody2.xcscheme  xcschememanagement.plist
nbody2/docs/: Makefile  upload_html.sh
nbody2/docs/source/: body.rst  builtin.rst  conf.py  index.rst  system.rst  tipsy.rst  vec3.rst
nbody2/tests/: test_mat4.c  test_mat4.h  test_vec3.c  test_vec3.h  tests.c  tests.h
nbody2/viewer/: mat4.c  mat4.h  vec2.c  vec2.h  viewer.c  viewer.h
nbody2/viewer/shaders/: body_vertex_shader.glsl  simple_frag_shader.glsl  tree_div.glsl
